# pw-resolved-discover

./: Cargo.toml  README.adoc  flake.nix  resolve1.xml
src/: main.rs  resolve1.rs  rr.rs
