[package]
name = "pw-resolved-discover"
version = "0.1.0"
edition = "2021"

[dependencies]
dbus = "0.9.7"
derivative = "2.2.0"
libc = "0.2.147"
nom = "7.1.3"
pipewire = {path = "/home/lach/build/pipewire-rs/pipewire"}
pipewire-sys = {path = "/home/lach/build/pipewire-rs/pipewire-sys"}
real_c_string = "1.0.0"
thiserror = "1.0.44"
